--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
   "name": "project",
   "version": "1.0.0",
-  "description": "A beginners class to node js",
+  "description": "A beginners class on nodejs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./index.js",
     "dev": "nodemon ./index.js"
   },
-  "author": "Tega",
+  "author": "owujib",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
-    "mongodb": "^3.6.9",
-    "mongoose": "^5.12.15",
+    "mongoose": "^5.12.14",
     "multer": "^1.4.2"
   },
   "devDependencies": {
